components/spring-boot-demo/namespace-spring-boot-demo.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: spring-boot-demo
  annotations:
    argocd.argoproj.io/sync-options: Delete=false
    argocd.argoproj.io/sync-wave: '-10'
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
