components/spring-boot-demo/peerauthentication-spring-boot-demo-disable-mtls-jfr-port-only.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: spring-boot-demo-disable-mtls-jfr-port-only
  namespace: spring-boot-demo
spec:
  # selector:
  #   matchLabels:
  #     app.kubernetes.io/name: spring-boot-demo
  mtls:
    # mode: STRICT
    mode: DISABLE
  # portLevelMtls:
  #   "9091":
  #     mode: DISABLE
