components/spring-boot-demo/peerauthentication-spring-boot-demo-disable-mtls.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: spring-boot-demo-disable-mtls
  namespace: spring-boot-demo
spec:
  mtls:
    mode: DISABLE
