components/spring-boot-demo/patch-working-dir.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-demo
spec:
  template:
    spec:
      containers:
      - name: spring-boot-demo
        # This fixes the 'Permission Denied' by making /tmp the starting point
        workingDir: /tmp
