components/spring-boot-demo/destinationrule-disable-mtls-for-cryostat.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: disable-mtls-for-cryostat
  annotations:
    argocd.argoproj.io/sync-wave: '4'
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  host: cryostat-headless.cryostat.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
