components/spring-boot-demo/serviceentry-cryostat.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: cryostat
  annotations:
    argocd.argoproj.io/sync-wave: '4'
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  hosts:
  - cryostat-headless.cryostat.svc.cluster.local
  location: MESH_EXTERNAL
  # ports:
  # - number: 8181
  #   name: tcp-cryostat
  #   protocol: TCP
  # - number: 8989
  #   name: tcp-jfr-ds
  #   protocol: TCP
  # - number: 4180
  #   name: http
  #   protocol: HTTP
  resolution: DNS
