components/spring-boot-demo/networkpolicy-cryostat.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: cryostat
  namespace: spring-boot-demo
spec:
  podSelector: {}
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cryostat
  policyTypes:
    - Ingress
